--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Sebastián Sánchez | Portfolio</title>
@@ -19,9 +14,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<a href="#" class="icon brands fa-github"><span class="label">Github</span></a>
-						<a href="#" class="icon brands fa-linkedin-in"><span class="label">Github</span></a>
+						<a href="index.html" class="logo"><strong>IANCHEZ</strong> <span>Portfolio</span></a>
+						<a href="https://github.com/ianchez" class="icon brands fa-github"><span class="label">Github</span></a>
+						<a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
