--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>IANCHEZ</strong> <span>Portfolio</span></a>
+						<a href="index.html" class="logo"><strong>IANCHEZ</strong><span>Portfolio</span></a>
 						<a href="https://github.com/ianchez" class="icon brands fa-github"><span class="label">Github</span></a>
 						<a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
+						<a href="https://soundcloud.com/ianchez" class="icon brands fa-soundcloud"><span class="label">Soundcloud</span></a>
+						<a href="https://ianchez.notion.site/Sebastian-Sanchez-Pe-a-beffebdcf4414be28128e2dfdd5cb7c4" class="icon cv"><i class="fas fa-user-tie"></i><span>cv</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
