--- a/landing.html
+++ b/landing.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Landing - Forty by HTML5 UP</title>
@@ -19,12 +14,16 @@
 
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header" class="alt">
+					<a href="index.html" class="logo"><strong>IANCHEZ</strong><span>Portfolio</span></a>
+					<a href="https://github.com/ianchez" class="icon brands fa-github"><span class="label">Github</span></a>
+					<a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
+					<a href="https://soundcloud.com/ianchez" class="icon brands fa-soundcloud"><span class="label">Soundcloud</span></a>
+					<a href="https://ianchez.notion.site/Sebastian-Sanchez-Pe-a-beffebdcf4414be28128e2dfdd5cb7c4" class="icon cv"><i class="fas fa-user-tie"></i><span>cv</span></a>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
 
 				<!-- Menu -->
 					<nav id="menu">
