Updated sections on Home, and on Menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>IANCHEZ</strong> <span>Portfolio</span></a>
 						<a href="https://github.com/ianchez" class="icon brands fa-github"><span class="label">Github</span></a>
-						<a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
+						<a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/?locale=en_US" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
 						<a href="https://soundcloud.com/ianchez" class="icon brands fa-soundcloud"><span class="label">Soundcloud</span></a>
 						<a href="https://ianchez.notion.site/Sebastian-Sanchez-Pe-a-beffebdcf4414be28128e2dfdd5cb7c4" class="icon cv"><i class="fas fa-user-tie"></i><span>cv</span></a>
 						<nav>
@@ -28,8 +28,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="landing.html">About me</a></li>
+							<li><a href="generic.html">Showcase</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -67,8 +67,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">About me</a></h3>
+										<p>FullStack Developer</p>
+										<!-- <p>Music Producer | DJ</p> -->
 									</header>
 								</article>
 								<article>
@@ -76,8 +77,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Showcase</a></h3>
+										<p>Experience my work</p>
 									</header>
 								</article>
 								<article>
@@ -85,8 +86,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">My experience</a></h3>
+										<p>My work history and its highlights</p>
 									</header>
 								</article>
 								<article>
@@ -94,11 +95,11 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Learning path</a></h3>
+										<p>Certificates and timeline</p>
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -106,8 +107,8 @@
 										<h3><a href="landing.html" class="link">Consequat</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
-								</article>
-								<article>
+								</article> -->
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
@@ -115,11 +116,11 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<!-- <section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -129,7 +130,7 @@
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 					</div>
 
@@ -137,7 +138,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<!--  <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -156,30 +157,24 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
-								</form>
+								</form> -->
 							</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<a href="#">contact@ianchez.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<h3>Location</h3>
+										<span>
+											Santiago,<br />
+											Chile<br />
+										</span>
 									</div>
 								</section>
 							</section>
@@ -190,11 +185,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+								<li><a href="https://github.com/ianchez" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/?locale=en_US" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://soundcloud.com/ianchez" class="icon brands alt fa-soundcloud"><span class="label">Soundcloud</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
