Renaming landing to about_me

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">About me</a></li>
+							<li><a href="about_me.html">About me</a></li>
 							<li><a href="generic.html">Showcase</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="elements.html">Learning path</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<!-- <li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
 					</nav>
 
@@ -67,7 +67,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">About me</a></h3>
+										<h3><a href="about_me.html" class="link">About me</a></h3>
 										<p>FullStack Developer</p>
 										<!-- <p>Music Producer | DJ</p> -->
 									</header>
@@ -77,7 +77,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Showcase</a></h3>
+										<h3><a href="about_me.html" class="link">Showcase</a></h3>
 										<p>Experience my work</p>
 									</header>
 								</article>
@@ -86,7 +86,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">My experience</a></h3>
+										<h3><a href="about_me.html" class="link">My experience</a></h3>
 										<p>My work history and its highlights</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Learning path</a></h3>
+										<h3><a href="about_me.html" class="link">Learning path</a></h3>
 										<p>Certificates and timeline</p>
 									</header>
 								</article>
@@ -104,7 +104,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<h3><a href="about_me.html" class="link">Consequat</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article> -->
@@ -113,7 +113,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="about_me.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article> -->
@@ -127,7 +127,7 @@
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="about_me.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section> -->
