--- a/about_me.html
+++ b/about_me.html
@@ -29,9 +29,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">About me</a></li>
+							<li><a href="about_me.html">About me</a></li>
 							<li><a href="generic.html">Showcase</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="elements.html">Learning path</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
