--- a/elements.html
+++ b/elements.html
@@ -34,7 +34,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about_me.html">About me</a></li>
-							<li><a href="generic.html">Showcase</a></li>
+							<li><a href="showcase.html">Showcase</a></li>
 							<li><a href="elements.html">Learning path</a></li>
 						</ul>
 						<ul class="actions stacked">
