Rename elements page to learning_path

--- a/about_me.html
+++ b/about_me.html
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about_me.html">About me</a></li>
 							<li><a href="showcase.html">Showcase</a></li>
-							<li><a href="elements.html">Learning path</a></li>
+							<li><a href="learning_path.html">Learning path</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
