--- a/learning_path.html
+++ b/learning_path.html
@@ -50,7 +50,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Elements</h1>
+										<h1>Learning path</h1>
 									</header>
 
 									<!-- Content -->
