Replaced Log In button with Contact Me

--- a/about_me.html
+++ b/about_me.html
@@ -35,7 +35,7 @@
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button fit">Contact me</a></li>
 						</ul>
 					</nav>
 
@@ -50,8 +50,8 @@
 								<h1>About me</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Full Stack Developer</p>
+								<p>Learning enthusiast, lover of technology and innovation in every topic that helps to create a sustainable and simplest lifestyle</p>
 							</div>
 						</div>
 					</section>
