--- a/learning_path.html
+++ b/learning_path.html
@@ -39,7 +39,7 @@
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button fit">Contact me</a></li>
 						</ul>
 					</nav>
 
