--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								<li><a href="https://soundcloud.com/ianchez" class="icon brands alt fa-soundcloud"><span class="label">Soundcloud</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled</li>
 							</ul>
 						</div>
 					</footer>
