--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="about_me.html" class="link">Showcase</a></h3>
+										<h3><a href="showcase.html" class="link">Showcase</a></h3>
 										<p>Experience my work</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="about_me.html" class="link">Learning path</a></h3>
+										<h3><a href="learning_path.html" class="link">Learning path</a></h3>
 										<p>Certificates and timeline</p>
 									</header>
 								</article>
