chore: updated about_me.html

--- a/about_me.html
+++ b/about_me.html
@@ -47,11 +47,15 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>About me</h1>
+								<h1>👨‍💻 About me</h1>
 							</header>
 							<div class="content">
-								<p>Full Stack Developer</p>
-								<p>Learning enthusiast, lover of technology and innovation in every topic that helps to create a sustainable and simplest lifestyle</p>
+								<p>
+									Hello, I'm Sebastián, I'm a Full Stack Developer, although I've been focusing on the Front End lately.
+								</p>
+								<p>
+									I've been a developer for over 3 years, I've mostly worked on web platforms, but my latest job was creating a native app (iOS & Android) for mortgages applications.
+								</p>
 							</div>
 						</div>
 					</section>
@@ -63,24 +67,34 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>💻 Technologies</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>
+										Working mostly with Javascript / Typescript (ReactJS, React-Native, NodeJS).<br/>
+										I also have experience with Ruby on Rails and Python on the Back End.<br/>
+										On databases I've worked with Oracle SQL and PostgreSQL.
+									</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="showcase.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<a href="showcase.html" class="image work-experiece-img">
+										<img class="about-me-image" src="images/coding.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>👔 Work Experience</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												
+											</p>
+											<ul>
+												<li><b>React Native Developer</b> | Leniolabs_ LLC <span class="location-span">(📍 Santiago, Chile)</span></li>
+												<li><b>Lead Full Stack Developer - </b> | TCIT Cloud Solutions Ltda. <span class="location-span">(📍 Santiago, Chile)</span></li>
+											</ul>
 											<ul class="actions">
 												<li><a href="showcase.html" class="button">Learn more</a></li>
 											</ul>
@@ -94,12 +108,19 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>🎓 Education</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="showcase.html" class="button">Learn more</a></li>
+											<ul>
+												<li><b>Escuela de Javascript <i>(Javascript School)</i> - </b> | Platzi (2020 - Present) <span class="location-span">(🌐 Online)</span></li>
+												<li><b>Herramientas de programación en Python para procesamiento de datos <br/><i>(Python programming tools for data processing)</i></b> | TeledUC (2020) <span class="location-span">(🌐 Online)</span></li>
+												<li><b>Programmer Analyst</b> | INACAP (2018-2020) Incomplete <span class="location-span">(📍 Santiago, Chile)</span></li>
+												<li><b>Javascript, Understanding the weird parts</b> | Udemy (2018) <span class="location-span">(🌐 Online)</span></li>
+												<li><b>Javascript Essentials</b> | Udemy (2018) <span class="location-span">(🌐 Online)</span></li>
+												<li><b>Visual Basic Certification</b> | Universidad de Chile (2012) <span class="location-span">(📍 Santiago, Chile)</span></li>
 											</ul>
+											<!-- <ul class="actions">
+												<li><a href="showcase.html" class="button">Learn more</a></li>
+											</ul> -->
 										</div>
 									</div>
 								</section>
@@ -110,9 +131,13 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Hobbies</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<ul>
+												<li><b>⚽ Football (Soccer)</b></li>
+												<li><b>🎶 Music Production</b> | Electronic Music (Progressive House, Techno)</li>
+												<li><b>🎮 Video games on PC</b></li>
+											</ul>
 											<ul class="actions">
 												<li><a href="showcase.html" class="button">Learn more</a></li>
 											</ul>
@@ -122,7 +147,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<!-- <section id="three">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -132,8 +157,7 @@
 										<li><a href="showcase.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
-
+							</section> -->
 					</div>
 
 				<!-- Contact -->
@@ -166,24 +190,24 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">contact@ianchez.com</a>
 									</div>
 								</section>
-								<section>
+								<!-- <section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
 										<span>(000) 000-0000 x12387</span>
 									</div>
-								</section>
+								</section> -->
 								<section>
-									<div class="contact-method">
+									<!-- <div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
 										<span>1234 Somewhere Road #5432<br />
 										Nashville, TN 00000<br />
 										United States of America</span>
-									</div>
+									</div> -->
 								</section>
 							</section>
 						</div>
