chore: hide learning-path.html since its not done yet

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="learning_path.html" class="link">Learning path</a></h3>
+										<h3><a href="about_me.html" class="link">Learning path</a></h3>
 										<p>Certificates and timeline</p>
 									</header>
 								</article>
