chore: added loader gif to the second web app, and fixed it repository link

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -127,16 +127,19 @@
 												The challenge was to handle the different states of the items added to the cart<br/>
 												The total would get calculated, applying the discount rules, <b>give it a try!</b>
 											</p>
-											<iframe
-												width="100%"
-												height="600"
-												scrolling="auto"
-												frameborder="no"
-												src="https://movie-challenge-react.vercel.app/01">
-											</iframe>
+											
+											<div class="iframe-loader">
+												<iframe
+													width="100%"
+													height="600"
+													scrolling="auto"
+													frameborder="no"
+													src="https://movie-challenge-react.vercel.app/01">
+												</iframe>
+											</div>
 											<span class="repo-link">
 												Check the repository: 
-												<a href="https://github.com/Ianchez/git-history-app">https://github.com/Ianchez/git-history-app</a>
+												<a href="https://github.com/Ianchez/mediastream-challenge-react">https://github.com/Ianchez/mediastream-challenge-react</a>
 											</span>
 										</div>
 									
