fix: app-showcase contact section

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -160,8 +160,8 @@
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<!-- <section>
-								<form method="post" action="#">
+							<section>
+								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -180,8 +180,8 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
-								</form>
-							</section> -->
+								</form> -->
+							</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">
