--- a/app-showcase.html
+++ b/app-showcase.html
@@ -135,8 +135,8 @@
 										</div>
 									
 										<!-- Next and previous buttons -->
-										<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-										<a class="next" onclick="plusSlides(1)">&#10095;</a>
+										<a class="prev-button" onclick="plusSlides(-1)">&#10094;</a>
+										<a class="next-button" onclick="plusSlides(1)">&#10095;</a>
 									</div>
 
 
