chore: updated CV

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -129,6 +129,10 @@
 													src="https://gastrinut.cl">
 												</iframe>
 											</div>
+											<span class="repo-link">
+												Check the webpage on: 
+												<a href="https://gastrinut.cl">https://gastrinut.cl</a>
+											</span>
 										</div>
 									
 										<div class="mySlides fade">
@@ -186,7 +190,6 @@
 										<a class="prev-button" onclick="plusSlides(-1)">&#10094;</a>
 										<a class="next-button" onclick="plusSlides(1)">&#10095;</a>
 									</div>
-
 
 									<br/>
 									<br/>
